--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,14 +1,15 @@
-template_extension: jst.haml
-template_function: Haml
-
-
 
 javascripts:
-  library:
-    - vendor/assets/javascripts/underscore.js
-    - vendor/assets/javascripts/backbone.js
-    - vendor/assets/javascripts/haml.js
-
-  metric_lib:
-    - app/assets/javascripts/models/*.js
-    - app/views/**/*.jst.haml
+  backbone:
+    - underscore.js
+    - haml.js
+    - backbone.js
+  metric_model:
+    - models/metric.js
+    
+templates:
+  metric_view:
+    - app/views/metrics/*.jst.haml
+    
+metric_view:
+  - app/views/metrics/*.jst.haml
